--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,15 @@
 [versions]
 kotlin = "2.0.20"
+idea-ext = "1.1.8"
 
 [libraries]
 # actual plugins, but needed as dependencies in buildSrc
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+idea-ext-gradle-plugin = { module = "gradle.plugin.org.jetbrains.gradle.plugin.idea-ext:gradle-idea-ext", version.ref = "idea-ext" }
+
 
 [bundles]
 build-src = [
-    "kotlin-gradle-plugin"
+    "kotlin-gradle-plugin",
+    "idea-ext-gradle-plugin"
 ]
