--- a/mokt-cpp-bindings/CMakeLists.txt
+++ b/mokt-cpp-bindings/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.29)
 project(mokt_cpp_bindings)
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(mokt_cpp_bindings STATIC library.cpp)
+add_library(mokt_cpp_bindings STATIC mokt.cpp)
