--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,17 @@
 [versions]
 kotlin = "2.0.20"
 idea-ext = "1.1.8"
+dokka = "1.9.20"
 
 [libraries]
 # actual plugins, but needed as dependencies in buildSrc
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 idea-ext-gradle-plugin = { module = "gradle.plugin.org.jetbrains.gradle.plugin.idea-ext:gradle-idea-ext", version.ref = "idea-ext" }
-
+dokka-gradle-plugin = { module = "org.jetbrains.dokka:dokka-gradle-plugin", version.ref = "dokka" }
 
 [bundles]
 build-src = [
     "kotlin-gradle-plugin",
-    "idea-ext-gradle-plugin"
+    "idea-ext-gradle-plugin",
+    "dokka-gradle-plugin"
 ]
