--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 kotlin.code.style=official
+kotlin.native.ignoreDisabledTargets=true
+kotlin.mpp.enableCInteropCommonization=true
 
 org.gradle.jvmargs=-Xmx5G
 org.gradle.parallel=true
