feat: suppress warn from android gradle compatibility check

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 kotlin.code.style=official
 kotlin.native.ignoreDisabledTargets=true
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
 org.gradle.jvmargs=-Xmx5G
 org.gradle.parallel=true
