--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ kotlin_build:
   image: ${GRADLE_IMAGE}
   stage: kotlin_build
   before_script:
-    - apt-get install curl -y && curl https://sh.rustup.rs -sSf | sh
+    - apt-get install curl -y && curl https://sh.rustup.rs -sSf | sh -s -- -y
   script:
     - gradle clean build dokkaHtmlMultiModule -x check -x allTests -x test
   artifacts:
