--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ kotlin_build:
   stage: kotlin_build
   before_script:
     - apt-get install curl -y && curl https://sh.rustup.rs -sSf | sh -s -- -y
+    - exec bash
   script:
     - gradle clean build dokkaHtmlMultiModule -x check -x allTests -x test
   artifacts:
