--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,10 @@ stages:
 
 variables:
   WRITERSIDE_BUILDER_VERSION: "242.21870"
-  GRADLE_IMAGE: "gradle:8.9-jdk21"
+  UBUNTU_IMAGE: "ubuntu:latest"
 
 kotlin_build:
-  image: ${GRADLE_IMAGE}
+  image: ${UBUNTU_IMAGE}
   stage: kotlin_build
   before_script:
     - apt-get update -y  && apt upgrade -y
@@ -20,7 +20,7 @@ kotlin_build:
     - curl https://sh.rustup.rs -sSf | sh -s -- -y
     - source ~/.bashrc
   script:
-    - gradle clean build dokkaHtmlMultiModule -x check -x allTests -x test
+    - ./gradlew clean build dokkaHtmlMultiModule -x check -x allTests -x test
   artifacts:
     expire_in: 10 days
     paths:
