--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,21 +9,22 @@ stages:
 
 variables:
   WRITERSIDE_BUILDER_VERSION: "242.21870"
-  GRADLE_IMAGE: "gradle:8.9-jdk21"
+  UBUNTU_IMAGE: "ubuntu:latest"
+  JAVA_VERSION: "openjdk-21-jdk"
   SDK_MANAGER_VERSION: "google-android-cmdline-tools-9.0-installer"
   ANDROID_COMPILE_SDK: "34"
 
 kotlin_build:
-  image: ${GRADLE_IMAGE}
+  image: ${UBUNTU_IMAGE}
   stage: kotlin_build
   before_script:
     - apt update -y && apt upgrade -y
-    - apt install curl gcc cargo -y
+    - apt install curl gcc cargo ${JAVA_VERSION} -y
     - echo 1 | apt install google-android-cmdline-tools-9.0-installer -y
     - yes | sdkmanager --licenses
     - export ANDROID_HOME=/usr/lib/android-sdk
   script:
-    - gradle clean build dokkaHtmlMultiModule -x check -x allTests -x test
+    - ./gradlew clean build dokkaHtmlMultiModule -x check -x allTests -x test
   artifacts:
     expire_in: 10 days
     paths:
