feat: added docs build step

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,17 +9,44 @@ stages:
 
 variables:
   WRITERSIDE_BUILDER_VERSION: "242.21870"
+  WRITERSITE_INSTANCE: "docs/m"
   ANDROID_IMAGE: "ghcr.io/cirruslabs/android-sdk:34"
 
-kotlin_build:
-  image: ${ANDROID_IMAGE}
-  stage: kotlin_build
-  before_script:
-    - apt update -y && apt upgrade -y
-    - apt install curl gcc cargo -y
+#kotlin_build:
+#  image: ${ANDROID_IMAGE}
+#  stage: kotlin_build
+#  before_script:
+#    - apt update -y && apt upgrade -y
+#    - apt install curl gcc cargo -y
+#  script:
+#    - ./gradlew clean build dokkaHtmlMultiModule -x check -x allTests -x test
+
+docs_build:
+  image: registry.jetbrains.team/p/writerside/builder/writerside-builder:${WRITERSIDE_BUILDER_VERSION}
+  stage: docs_build
   script:
-    - ./gradlew clean build dokkaHtmlMultiModule -x check -x allTests -x test
+    - set -e
+    - export DISPLAY=:99
+    - Xvfb :99 &
+    - /opt/builder/bin/idea.sh helpbuilderinspect -source-dir ./docs -product $INSTANCE --runner gitlab -output-dir public/ || true
+    - test -e public/$ARTIFACT
   artifacts:
-    expire_in: 10 days
     paths:
-      - build/dokka/htmlMultiModule
+      - public/report.json
+    expire_in: 10 days
+
+#kotlin_test:
+#  image: ${ANDROID_IMAGE}
+#  stage: kotlin_test
+#  before_script:
+#    - apt update -y && apt upgrade -y
+#    - apt install curl gcc cargo -y
+#  script:
+#    - ./gradlew allTests
+#  artifacts:
+#    reports:
+#      junit:
+#        - build/test-results/test/TEST-*.xml
+#
+#docs_test:
+#  stage: docs_test
