--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,18 +13,20 @@ variables:
   WRITERSITE_INSTANCE: "docs/m"
   ANDROID_IMAGE: "ghcr.io/cirruslabs/android-sdk:34"
 
-.kotlin_build:
+kotlin_build:
   image: ${ANDROID_IMAGE}
   stage: kotlin_build
+  needs: []
   before_script:
     - apt update -y && apt upgrade -y
     - apt install curl gcc cargo -y
   script:
     - ./gradlew clean build dokkaHtmlMultiModule -x check -x allTests -x test
 
-.docs_build:
+docs_build:
   image: registry.jetbrains.team/p/writerside/builder/writerside-builder:${WRITERSIDE_BUILDER_VERSION}
   stage: docs_build
+  needs: []
   script:
     - set -e
     - export DISPLAY=:99
@@ -36,25 +38,20 @@ variables:
       - public/report.json
     expire_in: 10 days
 
-build:
-  stage: build
-  extends:
-    - .kotlin_build
-    - .docs_build
-  parallel: 2
+kotlin_test:
+  image: ${ANDROID_IMAGE}
+  stage: kotlin_test
+  needs:
+    - kotlin_build
+  before_script:
+    - apt update -y && apt upgrade -y
+    - apt install curl gcc cargo -y
+  script:
+    - ./gradlew allTests
+  artifacts:
+    reports:
+      junit:
+        - build/test-results/test/TEST-*.xml
 
-#kotlin_test:
-#  image: ${ANDROID_IMAGE}
-#  stage: kotlin_test
-#  before_script:
-#    - apt update -y && apt upgrade -y
-#    - apt install curl gcc cargo -y
-#  script:
-#    - ./gradlew allTests
-#  artifacts:
-#    reports:
-#      junit:
-#        - build/test-results/test/TEST-*.xml
-#
 #docs_test:
 #  stage: docs_test
