--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ docs_test:
     - docs_build
   before_script:
     - apt update -y && apt upgrade -y
-    - apt install curl openjdk-21jdk -y
+    - apt install curl openjdk-21-jdk-headless -y
   script:
     - cd public
     - curl -o wrs-checker.jar -L https://packages.jetbrains.team/maven/p/writerside/maven/com/jetbrains/writerside/writerside-ci-checker/1.0/writerside-ci-checker-1.0.jar
