--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,7 @@ kotlin.native.ignoreDisabledTargets=true
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
+android.useAndroidX=true
+
 org.gradle.jvmargs=-Xmx5G
 org.gradle.parallel=true
