--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ dokka = "1.9.20"
 android = "8.5.2"
 coroutines = "1.9.0"
 ktor = "2.3.12"
-kotest = "5.9.1"
+kotest = "6.0.0.M1"
 serialization = "1.7.3"
 android-browser = "1.8.0"
 
