feat: added support for uploading test results

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,11 @@ kotlin_test:
   artifacts:
     reports:
       junit:
-        - build/test-results/test/TEST-*.xml
+        - "**/build/test-results/jvmTest/TEST-*.xml"
+        - "**/build/test-results/linuxX64Test/TEST-*.xml"
+        - "**/build/test-results/jsNodeTest/TEST-*.xml"
+        - "**/build/test-results/testDebugUnitTest/TEST-*.xml"
+        - "**/build/test-results/mingwX64Test/TEST-*.xml"
 
 docs_test:
   stage: docs_test
